tests/ui/parser/fn-body-optional-semantic-fail.stderr
error: free function without a body
  --> $DIR/fn-body-optional-semantic-fail.rs:7:5
   |
LL |     fn f1();
   |     ^^^^^^^^
   |
help: provide a definition for the function
   |
LL -     fn f1();
LL +     fn f1() { <body> }
   |

error: free function without a body
  --> $DIR/fn-body-optional-semantic-fail.rs:8:5
   |
LL |     fn f1_rpit() -> impl Trait;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: provide a definition for the function
   |
LL -     fn f1_rpit() -> impl Trait;
LL +     fn f1_rpit() -> impl Trait { <body> }
   |

error: associated function in `impl` without body
  --> $DIR/fn-body-optional-semantic-fail.rs:18:9
   |
LL |         fn f1();
   |         ^^^^^^^^
   |
help: provide a definition for the function
   |
LL -         fn f1();
LL +         fn f1() { <body> }
   |

error: associated function in `impl` without body
  --> $DIR/fn-body-optional-semantic-fail.rs:23:9
   |
LL |         fn f3();
   |         ^^^^^^^^
   |
help: provide a definition for the function
   |
LL -         fn f3();
LL +         fn f3() { <body> }
   |

error: incorrect function inside `extern` block
  --> $DIR/fn-body-optional-semantic-fail.rs:29:12
   |
LL |     extern "C" {
   |     ---------- `extern` blocks define existing foreign functions and functions inside of them cannot have a body
LL |         fn f5(); // OK.
LL |         fn f6() {}
   |            ^^ cannot have a body
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html
help: remove the invalid body
   |
LL -         fn f6() {}
LL +         fn f6() ;
   |

error: aborting due to 5 previous errors

